Fix mobile spacing

--- a/frontend/src/components/layout/layout.module.css
+++ b/frontend/src/components/layout/layout.module.css
@@ -2,7 +2,7 @@
   display: block;
   background-color: rgb(from var(--var-bg) r g b / 80%);
   backdrop-filter: blur(20px);
-  margin: 2rem 0.5rem 0 0.5rem;
+  margin: 2rem 0.5rem 3rem;
   border-radius: 16px;
   width: calc(100% - 3rem);
   padding: 1rem;
@@ -15,7 +15,7 @@
 
 @media (min-width: 70rem) {
   .container {
-    margin: 2rem auto 0;
+    margin: 2rem auto;
     width: 60%;
     padding: 2rem;
   }
